--- a/secondcv.html
+++ b/secondcv.html
@@ -21,40 +21,46 @@
 
 <body>
 
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">ENNOVA</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="nav-overlay"></div>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2  mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./about.html">About Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./ITService.html">OUR SERVICE</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./Nproduct.html">OUR PRODUCT</a>
-                        </li>
-                       
-                        <li class="nav-item">
-                            <a class="nav-link" href="./Contact.html">Contact Us</a>
-                        </li>
-                        
-                    </ul>
-                </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
+        <div class="container-fluid">
+
+            <div>
+                <a class="navbar-brand" href="./index.html">
+                    <img src="./Hero/logo-removebg-preview.png" width="70px" alt="">
+                    <img src="./Hero/ENNOVAlogo.png" width="130px"></a>
             </div>
-        </nav>
-    </header>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex align-items-center fw-bold ">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./about.html">About Us</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            What we do
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="./ITService.html">OUR SERVICE</a></li>
+                            <li><a class="dropdown-item" href="./Nproduct.html">OUR PRODUCT</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./Contact.html">Contact Us</a>
+                    </li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-2 btn btn-primary text-light">Call Now</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <section id="whatEmbe" class="container-fluid ">
         <h2 class=" fw-bold ">12VDC Relay Card</h2>
@@ -310,11 +316,8 @@
             <div class="  col-lg-1"></div>
             <!-- <div class="col-md-1"></div> -->
             <div class="col-md-12 col-lg-4">
-                <h1 class="mb-3  ">ENNOVA TECHNOLOGY</h1>
-                <p>Welcome to ENNOVA TECHNOLOGY, your trusted partner in advanced electrical solutions and IT
-                    integration.
-                    With a steadfast commitment to excellence, webring forth a diverse range of cutting-edge products and
-                    services designed to empower industries, streamline operations, and enhance efficiency.</p>
+                <a href="./index.html"><img src="./Hero/ENNOVAlogo.png" class="contactimgeno" alt=""></a>
+                <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software, and apps, we offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
             </div>
             <!-- <div class="col-md-1"></div> -->
             <div class="  col-lg-1"></div>
