--- a/relay.html
+++ b/relay.html
@@ -20,42 +20,48 @@
 </head>
 
 <body> 
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">ENNOVA</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="nav-overlay"></div>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2  mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./about.html">About Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./ITService.html">OUR SERVICE</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./Nproduct.html">OUR PRODUCT</a>
-                        </li>
-                       
-                        <li class="nav-item">
-                            <a class="nav-link" href="./Contact.html">Contact Us</a>
-                        </li>
-                        
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
+        <div class="container-fluid">
 
-<section id="whatEmbe" class="container-fluid ">
+            <div class="">
+                <a class="navbar-brand" href="./index.html">
+                    <img src="./Hero/logo-removebg-preview.png" width="70px" alt="">
+                    <img src="./Hero/ENNOVAlogo.png" width="130px"></a>
+            </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+ 
+            <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex align-items-center fw-bold ">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./about.html">About Us</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            What we do
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="./ITService.html">OUR SERVICE</a></li>
+                            <li><a class="dropdown-item" href="./Nproduct.html">OUR PRODUCT</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./Contact.html">Contact Us</a>
+                    </li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-2 btn btn-primary text-light">Call Now</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+<section id=" " class="container-fluid upmallpage">
     <h2 class=" fw-bold ">Relay CardS</h2>
     <div class="row ">
         <!-- <div class="col-lg-1"></div> -->
@@ -119,10 +125,10 @@
                 control and automation in various applications.Engineered with precision
                 and versatility,this relay card provides seamless integration,optimal
                 performance, and reliability for your electrical </p>
-                <ul>
-                    <li><a href="./secondcv.html">12VDC Relay Card</a></li>
-                    <li><a href="./firstcv.html">24VDC Relay Card</a></li>
-                    <li><a href="./thirdcv.html">230VAC Relay Card</a></li>
+                <ul class="ulstyletype">
+                    <li><i class="fa-solid fa-caret-right"></i><a href="./secondcv.html">12VDC Relay Card</a></li>
+                    <li><i class="fa-solid fa-caret-right"></i><a href="./firstcv.html">24VDC Relay Card</a></li>
+                    <li><i class="fa-solid fa-caret-right"></i><a href="./thirdcv.html">230VAC Relay Card</a></li>
                 </ul>
             <button type="button" class="btn btn-secondary">Get A Quote</button>
 
@@ -418,11 +424,8 @@
         <div class="  col-lg-1"></div>
         <!-- <div class="col-md-1"></div> -->
         <div class="col-md-12 col-lg-4">
-            <h1 class="mb-3  ">ENNOVA TECHNOLOGY</h1>
-            <p>Welcome to ENNOVA TECHNOLOGY, your trusted partner in advanced electrical solutions and IT
-                integration.
-                Withastead fast commitment to excellence, webring forth a diverse range of cutting-edgeproducts and
-                services designed to empower industries, streamline operations, and enhance efficiency.</p>
+            <a href="./index.html"><img src="./Hero/ENNOVAlogo.png" class="contactimgeno" alt=""></a>
+            <p>At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing electronics to developing websites, software, and apps, we offer a wide range of services to help businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making processes more efficient and effective. Our goal is to use technology to solve problems and drive growth for our clients.</p>
         </div>
         <!-- <div class="col-md-1"></div> -->
         <div class="  col-lg-1"></div>
